refactor: 직관 내역 아이템 클릭 시 position을 전달하도록 변경

--- a/android/app/src/main/res/layout/item_attendance_history_detail.xml
+++ b/android/app/src/main/res/layout/item_attendance_history_detail.xml
@@ -12,6 +12,10 @@
         <variable
             name="handler"
             type="com.yagubogu.presentation.attendance.AttendanceHistoryDetailViewHolder.Handler" />
+
+        <variable
+            name="bindingPosition"
+            type="int" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:background="@drawable/bg_white_radius_12dp"
-        android:onClick="@{() -> handler.onItemClick(attendanceHistoryItem)}"
+        android:onClick="@{() -> handler.onDetailItemClick(bindingPosition)}"
         android:paddingHorizontal="20dp"
         android:paddingVertical="24dp">
 
