--- a/android/app/src/main/res/layout/fragment_stats_detail.xml
+++ b/android/app/src/main/res/layout/fragment_stats_detail.xml
@@ -19,14 +19,14 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            tools:context=".presentation.stats.detail.StatsDetailFragment">
+            android:padding="20dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_vs_team_winning_percentage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_white_radius_12dp"
+                android:padding="20dp"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
@@ -34,7 +34,6 @@
                     style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="20dp"
                     android:text="@string/stats_vs_team_winning_percentage"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -42,8 +41,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_vs_team_winning_percentage"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:paddingHorizontal="20dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintTop_toBottomOf="@id/tv_vs_team_winning_percentage"
                     tools:itemCount="5"
@@ -53,14 +52,11 @@
                     android:id="@+id/constraint_show_more"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="20dp"
-                    android:layout_marginVertical="20dp"
+                    android:layout_marginTop="20dp"
                     android:background="@drawable/bg_stroke_gray300_radius_12dp"
                     android:onClick="@{() -> viewModel.toggleVsTeamStats()}"
                     android:paddingVertical="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/rv_vs_team_winning_percentage">
 
                     <TextView
@@ -88,7 +84,8 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/tv_show_more"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:tint="@color/gray400" />
+                        app:tint="@color/gray400"
+                        tools:src="@drawable/ic_arrow_down" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -97,6 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:padding="20dp"
                 android:background="@drawable/bg_white_radius_12dp"
                 app:layout_constraintTop_toBottomOf="@id/constraint_vs_team_winning_percentage">
 
@@ -105,9 +103,6 @@
                     style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:paddingHorizontal="20dp"
-                    android:paddingTop="20dp"
                     android:text="@string/stats_stadium_visit_count"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -116,16 +111,11 @@
                     android:id="@+id/bar_chart"
                     android:layout_width="match_parent"
                     android:layout_height="400dp"
-                    android:layout_marginHorizontal="20dp"
-                    android:layout_marginTop="4dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_stadium_visit_counts" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </ScrollView>
 </layout>
