feat: 닉네임 수정 글자수 12자 제한

--- a/android/app/src/main/res/layout/fragment_setting_nickname_edit.xml
+++ b/android/app/src/main/res/layout/fragment_setting_nickname_edit.xml
@@ -28,6 +28,7 @@
             android:hint="@string/setting_edit_nickname_dialog_hint"
             android:importantForAutofill="no"
             android:inputType="textPersonName"
+            android:maxLength="12"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_edit_nickname_title" />
