--- a/android/app/src/main/res/layout/item_livetalk_other_bubble.xml
+++ b/android/app/src/main/res/layout/item_livetalk_other_bubble.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="livetalkChatItem"
             type="com.yagubogu.presentation.livetalk.chat.LivetalkChatItem" />
@@ -73,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:text="@{livetalkChatItem.message}"
-            android:textColor="@color/gray900"
+            android:textColor="@{livetalkChatItem.reported ? @color/gray400 : @color/gray900}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/space_profile_bottom_spacing"
@@ -99,6 +101,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bg_white_radius_12dp_ripple"
             android:padding="12dp"
+            android:visibility="@{livetalkChatItem.reported? View.GONE: View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="@id/tv_chat_write_time"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_chat_write_time">
