feat: 경기 스코어보드 데이터 클래스 추가

--- a/android/app/src/main/res/layout/item_attendance_history_detail.xml
+++ b/android/app/src/main/res/layout/item_attendance_history_detail.xml
@@ -311,7 +311,7 @@
                         style="@style/TextView.Pretendard.Regular"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="KIA"
+                        android:text="@{attendanceHistoryItem.summary.awayTeam.name}"
                         android:textSize="12dp" />
 
                     <TextView
@@ -322,7 +322,7 @@
                         style="@style/TextView.Pretendard.Regular"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="두산"
+                        android:text="@{attendanceHistoryItem.summary.homeTeam.name}"
                         android:textSize="12dp" />
                 </TableRow>
 
