--- a/android/app/src/main/res/layout/item_attendance_history_detail.xml
+++ b/android/app/src/main/res/layout/item_attendance_history_detail.xml
@@ -311,8 +311,9 @@
                         style="@style/TextView.Pretendard.Regular"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="@{attendanceHistoryItem.summary.awayTeam.name}"
-                        android:textSize="12dp" />
+                        android:text="@{attendanceHistoryItem.awayTeam.name}"
+                        android:textSize="12dp"
+                        tools:text="KIA" />
 
                     <TextView
                         style="@style/TextView.Record.Title"
@@ -322,8 +323,9 @@
                         style="@style/TextView.Pretendard.Regular"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="@{attendanceHistoryItem.summary.homeTeam.name}"
-                        android:textSize="12dp" />
+                        android:text="@{attendanceHistoryItem.homeTeam.name}"
+                        android:textSize="12dp"
+                        tools:text="두산" />
                 </TableRow>
 
                 <View
