--- a/android/app/src/main/res/layout/activity_livetalk_chat.xml
+++ b/android/app/src/main/res/layout/activity_livetalk_chat.xml
@@ -131,7 +131,7 @@
             android:layout_height="40dp"
             android:layout_marginVertical="16dp"
             android:layout_marginEnd="20dp"
-            android:background="@{isVerified ? @drawable/bg_primary500_radius_12dp_ripple : @drawable/bg_gray400_radius_12dp}"
+            android:background="@{viewModel.isCanMessageSend ? @drawable/bg_primary500_radius_12dp_ripple : @drawable/bg_gray400_radius_12dp}"
             android:enabled="@{isVerified}"
             android:onClick="@{() -> viewModel.sendMessage()}"
             app:layout_constraintBottom_toBottomOf="parent"
