feat: 설정 화면에 내 정보 표시 연동

--- a/android/app/src/main/res/layout/fragment_setting_delete_account.xml
+++ b/android/app/src/main/res/layout/fragment_setting_delete_account.xml
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:lineSpacingExtra="4dp"
-            android:text="@{@string/setting_remember_message(viewModel.nickname, 9999)}"
+            android:text="@{@string/setting_remember_message(viewModel.nickname, viewModel.memberPeriod)}"
             android:textAlignment="center"
             android:textColor="@color/gray500"
             android:textSize="14sp"
