--- a/android/app/src/main/res/layout/item_attendance_history_detail.xml
+++ b/android/app/src/main/res/layout/item_attendance_history_detail.xml
@@ -12,10 +12,6 @@
         <variable
             name="handler"
             type="com.yagubogu.presentation.attendance.AttendanceHistoryDetailViewHolder.Handler" />
-
-        <variable
-            name="bindingPosition"
-            type="int" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:background="@drawable/bg_white_radius_12dp"
-        android:onClick="@{() -> handler.onDetailItemClick(bindingPosition)}"
+        android:onClick="@{() -> handler.onDetailItemClick(attendanceHistoryItem)}"
         android:paddingHorizontal="20dp"
         android:paddingVertical="24dp">
 
