--- a/android/app/src/main/res/layout/item_attendance_history_summary.xml
+++ b/android/app/src/main/res/layout/item_attendance_history_summary.xml
@@ -11,10 +11,6 @@
         <variable
             name="handler"
             type="com.yagubogu.presentation.attendance.AttendanceHistorySummaryViewHolder.Handler" />
-
-        <variable
-            name="bindingPosition"
-            type="int" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:background="@drawable/bg_white_radius_12dp"
-        android:onClick="@{() -> handler.onSummaryItemClick(bindingPosition)}"
+        android:onClick="@{() -> handler.onSummaryItemClick(attendanceHistoryItem)}"
         android:paddingHorizontal="20dp"
         android:paddingVertical="24dp">
 
