--- a/android/app/src/main/res/layout/fragment_attendance_history.xml
+++ b/android/app/src/main/res/layout/fragment_attendance_history.xml
@@ -18,50 +18,66 @@
         android:paddingBottom="12dp"
         tools:context=".presentation.attendance.AttendanceHistoryFragment">
 
-        <Spinner
-            android:id="@+id/spinner_attendance_history_filter"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:overlapAnchor="false"
-            android:paddingEnd="20dp"
-            android:spinnerMode="dropdown"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/ic_arrow_down"
-            app:layout_constraintBottom_toBottomOf="@id/spinner_attendance_history_filter"
-            app:layout_constraintEnd_toEndOf="@id/spinner_attendance_history_filter"
-            app:layout_constraintTop_toTopOf="@id/spinner_attendance_history_filter"
-            app:tint="@color/gray500" />
+            <Spinner
+                android:id="@+id/spinner_attendance_history_filter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:overlapAnchor="false"
+                android:paddingEnd="20dp"
+                android:spinnerMode="dropdown"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_attendance_history_order"
-            style="@style/TextView.Pretendard.Regular"
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_arrow_down"
+                app:layout_constraintBottom_toBottomOf="@id/spinner_attendance_history_filter"
+                app:layout_constraintEnd_toEndOf="@id/spinner_attendance_history_filter"
+                app:layout_constraintTop_toTopOf="@id/spinner_attendance_history_filter"
+                app:tint="@color/gray500" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_order"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:onClick="@{() -> viewModel.switchAttendanceHistoryOrder()}"
-            android:paddingEnd="20dp"
-            android:textColor="@color/gray500"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/spinner_attendance_history_filter"
+            app:layout_constraintBottom_toBottomOf="@id/constraint_filter"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/spinner_attendance_history_filter"
-            tools:text="최신순" />
+            app:layout_constraintTop_toTopOf="@id/constraint_filter">
 
-        <ImageView
-            android:id="@+id/iv_attendance_history_switch"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:src="@drawable/ic_switch"
-            app:layout_constraintBottom_toBottomOf="@id/tv_attendance_history_order"
-            app:layout_constraintEnd_toEndOf="@id/tv_attendance_history_order"
-            app:layout_constraintTop_toTopOf="@id/tv_attendance_history_order"
-            app:tint="@color/gray500" />
+            <TextView
+                android:id="@+id/tv_attendance_history_order"
+                style="@style/TextView.Pretendard.Regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:onClick="@{() -> viewModel.switchAttendanceHistoryOrder()}"
+                android:paddingEnd="20dp"
+                android:textColor="@color/gray500"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="최신순" />
+
+            <ImageView
+                android:id="@+id/iv_attendance_history_switch"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/ic_switch"
+                app:layout_constraintBottom_toBottomOf="@id/tv_attendance_history_order"
+                app:layout_constraintEnd_toEndOf="@id/tv_attendance_history_order"
+                app:layout_constraintTop_toTopOf="@id/tv_attendance_history_order"
+                app:tint="@color/gray500" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_attendance_history"
@@ -70,7 +86,7 @@
             android:layout_marginTop="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/spinner_attendance_history_filter" />
+            app:layout_constraintTop_toBottomOf="@id/constraint_filter" />
 
         <ImageView
             android:id="@+id/iv_empty_history"
