--- a/android/app/src/main/res/layout/fragment_setting_main.xml
+++ b/android/app/src/main/res/layout/fragment_setting_main.xml
@@ -66,10 +66,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:textColor="@color/gray500"
-                    app:joinDateFormat="@{viewModel.myMemberInfoItem.createdAt}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_my_nickname" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_my_nickname"
+                    app:signUpDateFormat="@{viewModel.myMemberInfoItem.createdAt}" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
