refactor: Team 도메인 모델의 nickname을 shortname으로 변경

--- a/android/app/src/main/res/layout/item_livetalk_stadium.xml
+++ b/android/app/src/main/res/layout/item_livetalk_stadium.xml
@@ -92,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@{livetalkStadiumItem.awayTeam.nickname}"
+            android:text="@{livetalkStadiumItem.awayTeam.shortname}"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/tv_away_team_emoji"
@@ -132,7 +132,7 @@
             style="@style/TextView.Esamanru.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{livetalkStadiumItem.homeTeam.nickname}"
+            android:text="@{livetalkStadiumItem.homeTeam.shortname}"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@id/tv_away_team_nickname"
             app:layout_constraintEnd_toEndOf="@id/tv_home_team_emoji"
