--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -302,6 +302,7 @@
                     android:id="@+id/divider"
                     android:layout_width="match_parent"
                     android:layout_height="0.4dp"
+                    android:layout_marginTop="4dp"
                     app:dividerColor="@color/gray300"
                     app:layout_constraintTop_toBottomOf="@id/layout_my_victory_fairy" />
 
@@ -309,6 +310,7 @@
                     android:id="@+id/rv_victory_fairy"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
                     android:nestedScrollingEnabled="false"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintTop_toBottomOf="@id/divider" />
