--- a/android/app/src/main/res/layout/activity_livetalk_chat.xml
+++ b/android/app/src/main/res/layout/activity_livetalk_chat.xml
@@ -10,6 +10,10 @@
             type="com.yagubogu.presentation.livetalk.chat.LivetalkChatViewModel" />
 
         <variable
+            name="livetalkResponseItem"
+            type="com.yagubogu.presentation.livetalk.chat.LivetalkResponseItem" />
+
+        <variable
             name="isVerified"
             type="boolean" />
 
@@ -23,18 +27,50 @@
         android:fitsSystemWindows="true"
         tools:context=".presentation.livetalk.chat.LivetalkChatActivity">
 
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_stadium_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <View
+                android:layout_width="120dp"
+                android:layout_height="20dp"
+                android:background="@drawable/bg_radius_4dp"
+                android:backgroundTint="@color/gray300" />
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
         <TextView
             android:id="@+id/tv_stadium_name"
             style="@style/TextView.Pretendard.Bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@{viewModel.livetalkResponseItem.stadiumName}"
+            android:text="@{livetalkResponseItem.stadiumName}"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="고척 스카이돔" />
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_away_vs_home_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_stadium_name">
+
+            <View
+                android:layout_width="60dp"
+                android:layout_height="16dp"
+                android:background="@drawable/bg_radius_4dp"
+                android:backgroundTint="@color/gray300" />
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
         <TextView
             android:id="@+id/tv_away_vs_home_name"
@@ -42,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
-            android:text="@{@string/livetalk_away_home_name(viewModel.livetalkResponseItem.awayTeamName, viewModel.livetalkResponseItem.homeTeamName)}"
+            android:text="@{@string/livetalk_away_home_name(livetalkResponseItem.awayTeamName, livetalkResponseItem.homeTeamName)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_stadium_name"
@@ -108,7 +144,7 @@
                 android:background="@null"
                 android:enabled="@{isVerified}"
                 android:gravity="center_vertical"
-                android:hint="@{isVerified? @string/livetalk_chat_input_hint(viewModel.livetalkResponseItem.stadiumName) : @string/livetalk_chat_input_hint_unverified}"
+                android:hint="@{isVerified? @string/livetalk_chat_input_hint(livetalkResponseItem.stadiumName) : @string/livetalk_chat_input_hint_unverified}"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
                 android:maxLength="200"
