--- a/android/app/src/main/res/layout/fragment_stats_my.xml
+++ b/android/app/src/main/res/layout/fragment_stats_my.xml
@@ -192,85 +192,102 @@
                 android:paddingVertical="20dp"
                 app:layout_constraintTop_toBottomOf="@id/constraint_win_rate">
 
-                <TextView
-                    android:id="@+id/tv_my_team_emoji"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/stats_my_team_emoji"
-                    android:textSize="24sp"
-                    app:layout_constraintEnd_toEndOf="@id/tv_my_team_name"
-                    app:layout_constraintStart_toStartOf="@id/tv_my_team_name"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tv_my_team_name"
-                    style="@style/TextView.Pretendard.SemiBold.20"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraint_my_team"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center"
-                    android:text="@{statsMyUiModel.myTeam}"
-                    app:layout_constraintEnd_toStartOf="@id/tv_lucky_stadium_name"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_my_team_emoji"
-                    tools:text="KIA" />
-
-                <TextView
-                    style="@style/TextView.Pretendard.Regular.12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="@string/stats_my_team"
-                    android:textColor="@color/gray500"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@id/tv_my_team_name"
-                    app:layout_constraintStart_toStartOf="@id/tv_my_team_name"
-                    app:layout_constraintTop_toBottomOf="@id/tv_my_team_name" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/divider_my_stats">
+
+                    <TextView
+                        android:id="@+id/tv_my_team_emoji"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/stats_my_team_emoji"
+                        android:textSize="24sp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+
+                    <TextView
+                        android:id="@+id/tv_my_team_name"
+                        style="@style/TextView.Pretendard.SemiBold.20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@{statsMyUiModel.myTeam}"
+                        app:layout_constraintTop_toBottomOf="@id/tv_my_team_emoji"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        tools:text="KIA"/>
+
+                    <TextView
+                        style="@style/TextView.Pretendard.Regular.12"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="@string/stats_my_team"
+                        android:textColor="@color/gray500"
+                        app:layout_constraintTop_toBottomOf="@id/tv_my_team_name"
+                        app:layout_constraintStart_toStartOf="@id/tv_my_team_name"
+                        app:layout_constraintEnd_toEndOf="@id/tv_my_team_name"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <com.google.android.material.divider.MaterialDivider
+                    android:id="@+id/divider_my_stats"
                     android:layout_width="0.4dp"
                     android:layout_height="0dp"
                     android:layout_marginVertical="10dp"
                     app:dividerColor="@color/gray300"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toEndOf="@id/constraint_my_team"
+                    app:layout_constraintEnd_toStartOf="@id/constraint_lucky_stadium"/>
 
-                <TextView
-                    android:id="@+id/tv_lucky_stadium_emoji"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/stats_my_lucky_stadium_emoji"
-                    android:textSize="24sp"
-                    app:layout_constraintEnd_toEndOf="@id/tv_lucky_stadium_name"
-                    app:layout_constraintStart_toStartOf="@id/tv_lucky_stadium_name"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tv_lucky_stadium_name"
-                    style="@style/TextView.Pretendard.SemiBold.20"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraint_lucky_stadium"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center"
-                    android:text="@{statsMyUiModel.luckyStadium != null ? statsMyUiModel.luckyStadium : @string/stats_my_no_lucky_stadium}"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/tv_my_team_name"
-                    app:layout_constraintTop_toBottomOf="@id/tv_lucky_stadium_emoji"
-                    tools:text="챔피언스필드" />
-
-                <TextView
-                    style="@style/TextView.Pretendard.Regular.12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="@string/stats_my_lucky_stadium"
-                    android:textColor="@color/gray500"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@id/tv_lucky_stadium_name"
-                    app:layout_constraintStart_toStartOf="@id/tv_lucky_stadium_name"
-                    app:layout_constraintTop_toBottomOf="@id/tv_lucky_stadium_name" />
+                    app:layout_constraintStart_toEndOf="@id/divider_my_stats"
+                    app:layout_constraintEnd_toEndOf="parent">
+
+                    <TextView
+                        android:id="@+id/tv_lucky_stadium_emoji"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/stats_my_lucky_stadium_emoji"
+                        android:textSize="24sp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+
+                    <TextView
+                        android:id="@+id/tv_lucky_stadium_name"
+                        style="@style/TextView.Pretendard.SemiBold.20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@{statsMyUiModel.luckyStadium != null ? statsMyUiModel.luckyStadium : @string/stats_my_no_lucky_stadium}"
+                        app:layout_constraintTop_toBottomOf="@id/tv_lucky_stadium_emoji"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        tools:text="챔피언스필드"/>
+
+                    <TextView
+                        style="@style/TextView.Pretendard.Regular.12"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="@string/stats_my_lucky_stadium"
+                        android:textColor="@color/gray500"
+                        app:layout_constraintTop_toBottomOf="@id/tv_lucky_stadium_name"
+                        app:layout_constraintStart_toStartOf="@id/tv_lucky_stadium_name"
+                        app:layout_constraintEnd_toEndOf="@id/tv_lucky_stadium_name"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
